# notitle

./: .gitignore  CMakeLists.txt  d2d1.def
.github/workflows/: cmake.yml
.omo/drafts/: anaplug-evolution.md
.omo/run-continuation/: ses_143ffa4b2ffeFBrXSCIGA3M2gi.json
docs/: CLAUDE-OPUS-HANDOFF.md
docs/superpowers/specs/: 2026-06-12-anaplug-evolution-design.md
juce-test-clone/modules/juce_core/system/: juce_SystemStats.cpp  juce_TargetPlatform.h
scripts/: opencode-usage.ps1  patch_juce_mingw.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AdvancedGranularEngine.cpp  AdvancedGranularEngine.h  AnaPlugEngine.cpp  AnaPlugEngine.h  Arpeggiator.cpp  Arpeggiator.h  AudioFileData.h  AudioToMidiConverter.cpp  AudioToMidiConverter.h  BlurEffect.cpp  BlurEffect.h  BpmDetector.cpp  BpmDetector.h  DualSignalChain.cpp  DualSignalChain.h  DualTimbre.cpp  DualTimbre.h  EffectAdapters.h  EffectsChain.cpp  EffectsChain.h  FMEngine.cpp  FMEngine.h  FilterModulation.cpp  FilterModulation.h  FrequencyShaper.cpp  FrequencyShaper.h  GenerativeTimbreDesigner.cpp  GenerativeTimbreDesigner.h  GranularSynthesizer.cpp  GranularSynthesizer.h  HPSSEngine.cpp  HPSSEngine.h  Harmonizer.cpp  Harmonizer.h  ImageSynthesizer.cpp  ImageSynthesizer.h  LFOSystem.cpp  LFOSystem.h  LocalEQ.cpp  LocalEQ.h  (+97 more)
src/dsp/effects/: AutoTuneEffect.cpp  AutoTuneEffect.h  BitcrusherEffect.cpp  BitcrusherEffect.h  BreathNoiseGenerator.cpp  BreathNoiseGenerator.h  ChorusEffect.cpp  ChorusEffect.h  CompressorEffect.cpp  CompressorEffect.h  ConsolidatedDelay.cpp  ConsolidatedDelay.h  DeEsserModule.cpp  DeEsserModule.h  DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  DriveModule.cpp  DriveModule.h  DynamicsModule.cpp  DynamicsModule.h  EQCommon.h  EQEffect.cpp  EQEffect.h  EQModule.cpp  EQModule.h  FlangerEffect.cpp  FlangerEffect.h  FormantTuner.cpp  FormantTuner.h  LimiterEffect.cpp  LimiterEffect.h  ModulationEffects.cpp  ModulationEffects.h  ModulationModule.cpp  ModulationModule.h  PhaserEffect.cpp  PhaserEffect.h  PitchModule.cpp  (+19 more)
src/dsp/filters/: CombFilter.cpp  CombFilter.h  FormantFilterBank.cpp  FormantFilterBank.h
src/gui/: CreditsPanel.cpp  CreditsPanel.h  CyberpunkTheme.h  EffectRackComponent.cpp  EffectRackComponent.h  EvolutionPanel.cpp  EvolutionPanel.h  FilterVisualization.cpp  FilterVisualization.h  MeteringPanel.cpp  MeteringPanel.h  ModulationAssignPanel.cpp  ModulationAssignPanel.h  ModulationMatrixPanel.cpp  ModulationMatrixPanel.h  PartialEditorCanvas.cpp  PartialEditorCanvas.h  PresetBrowserPanel.cpp  PresetBrowserPanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  SpectrumEditorCanvas.cpp  SpectrumEditorCanvas.h  VisualFeedbackPanel.cpp  VisualFeedbackPanel.h  WaterfallDisplay.cpp  WaterfallDisplay.h  WaveformDisplay.cpp  WaveformDisplay.h  XYPad.cpp  XYPad.h
tests/: CMakeLists.txt  bench_performance.cpp  main.cpp  test_advanced_granular.cpp  test_arpeggiator.cpp  test_blur_effect.cpp  test_bpm_detector.cpp  test_consolidated_effects.cpp  test_cutting_edge_features.cpp  test_data_structures.cpp  test_dual_timbre.cpp  test_effect_presets.cpp  test_effects_chain.cpp  test_effects_new.cpp  test_engine_integration.cpp  test_filter_modulation.cpp  test_frequency_shaper.cpp  test_generative_timbre.cpp  test_granular_synthesis.cpp  test_harmonizer.cpp  test_image_synthesizer.cpp  test_lfo_system.cpp  test_macro_controller.cpp  test_midi_learn.cpp  test_modulation.cpp  test_multi_filter.cpp  test_multi_point_envelope.cpp  test_neural_style.cpp  test_neural_upsampler.cpp  test_new_effects.cpp  test_noise_oscillator.cpp  test_parallel_processor.cpp  test_partial_data_simd.cpp  test_partial_editor_canvas.cpp  test_partial_tracker.cpp  test_peak_detector.cpp  test_phase_propagation.cpp  test_physical_model.cpp  test_pitch_corrector.cpp  test_prism_effect.cpp  (+28 more)
